src_old/objects/ProjectServiceAttribute__c.object
<CustomObject>
    <description>Relates a Service Attribute to a Project Service and prepopulates default values. Service Attribute is related to Service, Project Service Attribute, and Attribute.</description>
    <fields>
        <fullName>AttachmentExt__c</fullName>
        <label>Attachment Ext</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentURL__c</fullName>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AttchFileName__c</fullName>
        <label>AttchFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeNumber__c</fullName>
        <formula>ServiceAttribute__r.AttributeNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeOrder__c</fullName>
        <formula>ServiceAttribute__r.AttributeOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttributeTitle__c</fullName>
        <formula>Attribute__r.AttributeTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeType__c</fullName>
        <formula>TEXT(Attribute__r.AttributeType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttributeType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <label>Attribute Value</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Project Service Attributes</relationshipLabel>
        <relationshipName>Project_Service_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attributename__c</fullName>
        <formula>Attribute__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Attribute__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClonedAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cloned Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Project Service Attributes</relationshipLabel>
        <relationshipName>Project_Service_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ServiceAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Attribute</label>
        <referenceTo>ServiceAttribute__c</referenceTo>
        <relationshipLabel>Project Service Attributes</relationshipLabel>
        <relationshipName>Project_Service_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Project Service Attributes</relationshipLabel>
        <relationshipName>Project_Service_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Service Attribute</label>
    <nameField>
        <displayFormat>PSA-{00000000}</displayFormat>
        <label>Project Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>